// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transpiler More complex 1`] = `
"if (!ejs || typeof ejs.context !== \\"function\\") {
	foo = ejs;
	if (typeof window !== \\"undefined\\") {
		ejs = window.ejs;
	} else if (typeof global !== \\"undefined\\") {
		ejs = global.ejs;
	} else {
		return Promise.reject(new Error(\\"EJS module is not loaded\\"));
	}
}
foo = ejs.context(foo, {\\"strict\\":false,\\"localsName\\":\\"foo\\"},\\"undefined\\");
with(foo) {
	echo(\`
OK, so have fun! :D
-------------------
\`);
	
    var fruits = [\\"Apple\\", \\"Pear\\", \\"Orange\\", \\"Lemon\\"]
      , random = \\" \\".repeat(198).split(\\"\\").map(x => Math.random())
      ;
;
	echo(\`

These fruits are amazing:
\`);
	 for(var i = 0; i < fruits.length; ++i) { ;
	echo(\`
  - \`);
	safeEcho( fruits[i] );
	echo(\`s
\`);
	 } ;
	echo(\`
Let's see some random numbers:

\`);
	 
  random.forEach(function(c, i) {
;
	echo(\` \`);
	safeEcho( c.toFixed(10) + ((i + 1) % 6 === 0 ? \\"\\\\n\\": \\"\\") );
	
  });
;
	echo(\`

Hello \`);
	safeEcho( locals.name );
	echo(\` !
    \`);
}
return foo.resolveOutput();"
`;

exports[`Transpiler Simple case 1`] = `
"if (!ejs || typeof ejs.context !== \\"function\\") {
	foo = ejs;
	if (typeof window !== \\"undefined\\") {
		ejs = window.ejs;
	} else if (typeof global !== \\"undefined\\") {
		ejs = global.ejs;
	} else {
		return Promise.reject(new Error(\\"EJS module is not loaded\\"));
	}
}
foo = ejs.context(foo, {\\"strict\\":false,\\"localsName\\":\\"foo\\"},\\"undefined\\");
with(foo) {
	echo(\`
    <foo> \`);
	%
    <%# comment ;
	echo(\`
\`);
	 if (foo == \\";
	echo(\`\\\\\\"%>\\") { _%>
      \`);
	safeEcho( bar );
	echo(\`
    \`);
	 } ;
	echo(\`
    </foo>
    \`);
}
return foo.resolveOutput();"
`;
